@startuml

title __IMPL's Class Diagram__\n

  namespace learningapp {
    namespace services {
      namespace impl {
        class learningapp.services.impl.NotificationServiceImpl {
            + NotificationServiceImpl()
            + getAllNotifications()
            + saveNotification()
            - saveNotificationUsers()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace services {
      namespace impl {
        class learningapp.services.impl.QuestionServiceImpl {
            {static} - log : Logger
            + QuestionServiceImpl()
            + addTestQuestion()
            + getAllQuestionForProfessor()
            + getAllQuestionForStudent()
            + getAllQuestionsByTopic()
            + getNotificationsCount()
            + getQuestion()
            + updateTestQuestion()
            + validateQuestion()
            - addTestAnswer()
            - getTestQuestionEntity()
            - getTopicEntity()
            - saveNewTestAnswer()
            - updateTestAnswer()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace services {
      namespace impl {
        class learningapp.services.impl.SubjectServiceImpl {
            + SubjectServiceImpl()
            + addSubject()
            + addTopicToSubject()
            + getAllSubjects()
            + getSubject()
            + updateSubject()
            - getSubjectEntity()
            - updateTopic()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace services {
      namespace impl {
        class learningapp.services.impl.TestServiceImpl {
            {static} - log : Logger
            + TestServiceImpl()
            + addTest()
            + getTest()
            + getTestDifficulties()
            + getTests()
            + gradeTest()
            - checkCorrectQuestion()
            - computeTestGrade()
            - getDifficulty()
            - selectQuestionsFromTopic()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace services {
      namespace impl {
        class learningapp.services.impl.UserServiceImpl {
            - authenticationManager : AuthenticationManager
            {static} - log : Logger
            + UserServiceImpl()
            + checkPassword()
            + getUser()
            + login()
            + updateUser()
            - getUserEntity()
        }
      }
    }
  }
  

  learningapp.services.impl.NotificationServiceImpl .up.|> learningapp.services.NotificationService
  learningapp.services.impl.NotificationServiceImpl o-- learningapp.repositories.NotificationRepository : notificationRepository
  learningapp.services.impl.NotificationServiceImpl o-- learningapp.repositories.NotificationUserRepository : notificationUserRepository
  learningapp.services.impl.NotificationServiceImpl o-- learningapp.repositories.UserRepository : userRepository
  learningapp.services.impl.QuestionServiceImpl .up.|> learningapp.services.QuestionService
  learningapp.services.impl.QuestionServiceImpl o-- learningapp.repositories.TestAnswerRepository : testAnswerRepository
  learningapp.services.impl.QuestionServiceImpl o-- learningapp.repositories.TestQuestionRepository : testQuestionRepository
  learningapp.services.impl.QuestionServiceImpl o-- learningapp.repositories.TopicRepository : topicRepository
  learningapp.services.impl.QuestionServiceImpl o-- learningapp.repositories.UserRepository : userRepository
  learningapp.services.impl.SubjectServiceImpl .up.|> learningapp.services.SubjectService
  learningapp.services.impl.SubjectServiceImpl o-- learningapp.repositories.SubjectRepository : subjectRepository
  learningapp.services.impl.SubjectServiceImpl o-- learningapp.validator.SubjectValidator : subjectValidator
  learningapp.services.impl.SubjectServiceImpl o-- learningapp.repositories.TopicRepository : topicRepository
  learningapp.services.impl.TestServiceImpl .up.|> learningapp.services.TestService
  learningapp.services.impl.TestServiceImpl o-- learningapp.repositories.SubjectRepository : subjectRepository
  learningapp.services.impl.TestServiceImpl o-- learningapp.repositories.TestAnswerRepository : testAnswerRepository
  learningapp.services.impl.TestServiceImpl o-- learningapp.repositories.TestQuestionRepository : testQuestionRepository
  learningapp.services.impl.TestServiceImpl o-- learningapp.repositories.TestRepository : testRepository
  learningapp.services.impl.TestServiceImpl o-- learningapp.repositories.UserRepository : userRepository
  learningapp.services.impl.UserServiceImpl .up.|> learningapp.services.UserService
  learningapp.services.impl.UserServiceImpl o-- learningapp.security.JwtTokenProvider : jwtTokenProvider
  learningapp.services.impl.UserServiceImpl o-- learningapp.repositories.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
